...
                    Material(
                      color: shouldDisable
                          ? context.theme.disabledColor
                          : context.colorScheme.primary,
                      shape: const CircleBorder(),
                      child: InkWell(
                        key: const Key('chat_add_media_button'),
                        onTap: shouldDisable ? null : handleMediaSelection,
                        customBorder: const CircleBorder(),
                        child: SizedBox.square(
                          dimension: 50,
                          child: Icon(
                            Icons.add,
...
